API changes and implement getting approved panels and panels by Id
